--- a/news-room.html
+++ b/news-room.html
@@ -127,9 +127,7 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -147,9 +145,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -167,9 +163,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -187,9 +181,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -207,9 +199,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -227,9 +217,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -373,9 +361,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg text-base leading-7 font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -393,9 +379,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -413,9 +397,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -433,9 +415,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -453,9 +433,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -473,9 +451,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -501,9 +477,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group duration-300">
                                 <div class="w-full relative overflow-hidden duartion-300">
                                     <img fetchpriority="low" loading="lazy" src="img/event_cover_img.webp"
-                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -537,9 +511,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group duration-300">
                                 <div class="w-full relative overflow-hidden duartion-300">
                                     <img fetchpriority="low" loading="lazy" src="img/event_cover_img.webp"
-                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -573,9 +545,7 @@ Car Care Industry">
                             <div class="relative w-full flex flex-col gap-y-3 group duration-300">
                                 <div class="w-full relative overflow-hidden duartion-300">
                                     <img fetchpriority="low" loading="lazy" src="img/event_cover_img.webp"
-                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
+                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
