--- a/news-room.html
+++ b/news-room.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
-    <title></title>
+    <title>News Room | Petromin Express</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -127,7 +127,9 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -145,7 +147,9 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -163,7 +167,9 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -181,7 +187,9 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -199,7 +207,9 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -217,7 +227,9 @@
                             <div class="relative w-full flex flex-col gap-y-4 md:gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg  leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -361,7 +373,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg text-base leading-7 font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -379,7 +393,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -397,7 +413,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -415,7 +433,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -433,7 +453,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -451,7 +473,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group">
                                 <div class="w-full relative overflow-hidden duration-300">
                                     <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                                        class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="size-full group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -477,7 +501,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group duration-300">
                                 <div class="w-full relative overflow-hidden duartion-300">
                                     <img fetchpriority="low" loading="lazy" src="img/event_cover_img.webp"
-                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -511,7 +537,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group duration-300">
                                 <div class="w-full relative overflow-hidden duartion-300">
                                     <img fetchpriority="low" loading="lazy" src="img/event_cover_img.webp"
-                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
@@ -545,7 +573,9 @@
                             <div class="relative w-full flex flex-col gap-y-3 group duration-300">
                                 <div class="w-full relative overflow-hidden duartion-300">
                                     <img fetchpriority="low" loading="lazy" src="img/event_cover_img.webp"
-                                        class="group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes Car Care Industry" title="Petromin Express Revolutionizes Car Care Industry">
+                                        class="group-hover:lg:scale-125 duration-300"
+                                        alt="Petromin Express Revolutionizes Car Care Industry"
+                                        title="Petromin Express Revolutionizes Car Care Industry">
                                 </div>
                                 <h3
                                     class="md:text-lg leading-7 text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
